test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_while_stmt_empty_body.draco
proc main() void : while a do od; corp;

