test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_do_as_identifier.draco
int do;
 
proc main() void : a := 1; corp;
